Add jSpecify node.control.modbus package.